Updated to "How to use Requests"

--- a/_posts/2018-02-01-requests.md
+++ b/_posts/2018-02-01-requests.md
@@ -5,23 +5,40 @@ date:   2018-02-01 10:58:00 +0900
 categories: Python Python3 Requests
 ---
 # Requests 라이브러리 사용법
-- GET, POST 등의 메서드의 사용
-```python
-# GET 요청
-r = requests.get("http://google.com")
+1) GET, POST 등의 메서드의 사용
 
-# POST 요청
+    1) GET 요청
+  
+   
+```python
+r = requests.get("http://google.com")
+```
+
+    2) POST 요청
+    
+```python
 formdata = { "key1": "value1", "key2": "value2" }
 r = requests.post("http://example.com", data=formdata)
 ```
 
-- 그 밖에 PUT/DELETE/HEAD 등의 요청을 위한 메서드
+2) 그 밖에 PUT/DELETE/HEAD 등의 요청을 위한 메서드
+    
+    1) PUT 요청
+    
 ```python
-# PUT
 r = requests.put("http://httpbin.org/put")
-# DELETE
+```
+
+    2) DELETE 요청
+    
+```python
 r = requests.delete("http://httpbin.org/delete")
-# HEAD
+```
+    
+    3) HEAD 사용
+    
+```python
 r = requests.head("http://httpbin.org/get")
 ```
+
 GET, POST 등의 리턴값에 있는 text와 content 속성을 참조하여 내부의 데이터를 확인할 수 있다.
