--- a/_posts/2018-01-29-zabbix.md
+++ b/_posts/2018-01-29-zabbix.md
@@ -178,7 +178,7 @@ DebugLevel=4
 systemctl restart zabbix-agent
 tail -f /var/log/zabbix/zabbix_agentd.log
 ```
-SUCCEED를 확인 헀다면, zabbix_agentd의 DebugLevel을 다시 주석 처리한다.
+SUCCEED를 확인 했다면, zabbix_agentd의 DebugLevel을 다시 주석 처리한다.
 
 당신의 방화벽에서 Zabbix Server에서 Agent로의 10051 포트 Inbound 정책을 허용하고, Zabbix Agent에서 Zabbix Server로의 10050 포트 Inbound 정책을 허용한다.
 
