--- a/_posts/2018-01-29-zabbix.md
+++ b/_posts/2018-01-29-zabbix.md
@@ -30,7 +30,7 @@ apt install zabbix-server-mysql zabbix-frontend-php zabbix-agent
 
 Mysql 대상 유저로 로그인하여, zabbix database 생성 및 user 권한 설정을 해준다.
 
-```
+```sql
 CREATE DATABASE `zabbix` CHARACTER SET utf8 COLLATE utf8_bin;
 GRANT ALL PRIVILEGES ON zabbix.* to zabbix@localhost identified by 'YourDBPassword';
 FLUSH PRIVILEGES;
