--- a/_posts/2018-01-29-zabbix.md
+++ b/_posts/2018-01-29-zabbix.md
@@ -2,7 +2,10 @@
 layout: post
 title:  "How to install Zabbix"
 date:   2018-01-29 17:02:00 +0900
-categories: Linux Zabbix Zabbix-Server Zabbix-Agent
+tags:
+- Linux
+- Zabbix
+- Ubuntu
 ---
 # 자빅스(Zabbix) 설치 for Ubuntu 16.04
 
