--- a/_posts/2018-02-01-requests.md
+++ b/_posts/2018-02-01-requests.md
@@ -2,7 +2,9 @@
 layout: post
 title:  "How to use Requests in Python3"
 date:   2018-02-01 10:58:00 +0900
-categories: Python Python3 Requests
+tags:
+- Python
+- Requests
 ---
 # Requests 라이브러리 사용법
 ## 1. GET, POST 등의 메서드의 사용
