제목을 한글로 치환 및 트리 메뉴 수정

--- a/_posts/2018-01-29-zabbix.md
+++ b/_posts/2018-01-29-zabbix.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "How to install Zabbix"
+title:  "Ubuntu 16.04에 Zabbix 설치"
 date:   2018-01-29 17:02:00 +0900
 tags:
 - Linux
