--- a/_posts/2018-02-01-requests.md
+++ b/_posts/2018-02-01-requests.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "How to use Requests in Python3"
+title:  "Python3에서 Requests 사용법"
 date:   2018-02-01 10:58:00 +0900
 tags:
 - Python
